# JiraStructureToDocx

./: .gitignore  JiraStructureToDocx.cabal  build.sh  genDoc  testParser
JiraHaskell/: JiraHaskell.cabal  LICENSE  README
JiraHaskell/Jira/: BugReport.hs  ImageStripper.hs  IssueHierarchy.hs  IssueHierarchyToDocx.hs  IssueHierarchyToFsDocx.hs  JiraStructureToIssueHierarchy.hs  JiraTypes.hs  ProgramOptions.hs  Query.hs  StdStrFetch.hs  StdStrGen.hs  StrStdTypes.hs  Utility.hs  ZephyrJson.hs
JiraStructureToDocx/: JiraStructureToDocx.cabal  JiraStructureToDocx.hs  Reference.docx
PandocReaderJira/: PandocReaderJira.cabal  README
PandocReaderJira/Pandoc/Reader/: Jira.hs
PandocReaderJira/Pandoc/Reader/Jira/: Details.hs  Test.hs
PandocWriterHackedDocx/: PandocWriterHackedDocx.cabal  README
PandocWriterHackedDocx/Pandoc/Writer/: HackedDocx.hs
PandocWriterHackedDocx/Pandoc/Writer/HackedDocx/: ImageSize.hs  MIME.hs
src/: Data.hs  DescriptionParser.hs  DescriptionParserInner.hs  DocxCustom.hs  Highlighting.hs  ImageSize.hs  ImageStripper.hs  IssueHierarchy.hs  IssueHierarchyToDocx.hs  IssueHierarchyToFsDocx.hs  JiraStructureToDocx.hs  JiraStructureToIssueHierarchy.hs  JiraTypes.hs  MIME.hs  OpenDocumentCustom.hs  ProgramOptions.hs  Query.hs  Shared.hs  StdStrFetch.hs  StdStrGen.hs  StrStdTypes.hs  Utility.hs  Writers_Shared.hs  ZephyrJson.hs
testsuite/: TestDescriptionParser.hs  TestIssueHierarchyStripImages.hs  TestLoadIssueHierarchy.hs  TestPandoc.hs
