Name:           JiraStructureToDocx
Version:        0.0
Stability:      experimental
Description:    Utility to convert a Structure in Jira to a MS Word document.
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.9.2

executable JiraStructureToDocx
    main-is:            JiraStructureToDocx.hs
    GHC-Options:        -Wall -O4 -optc-Os
    hs-source-dirs:     src
    Other-Modules:      DescriptionParser, ImageStripper, IssueHierarchy, ProgramOptions, IssueHierarchyToDocx, JiraStructureToIssueHierarchy
    build-depends:      base, 
                        containers,
                        http-conduit, 
                        http-types, 
                        json, 
                        aeson, 
                        attoparsec, 
                        pretty, 
                        GenericPretty, 
                        ghc-prim,
                        directory,
                        mtl,
                        conduit,
                        transformers,
                        network,
                        bytestring,
                        HUnit,
                        pandoc,
                        parsec,
                        pandoc-types,
                        cmdargs,
                        safe,
                        blaze-markup,
                        utf8-string,
                        filepath,
                        hashable == 1.1.2.5,
                        test-framework-th,
                        test-framework,
                        test-framework-hunit,
                        raw-strings-qq,
                        resourcet,
                        monad-control


Test-Suite test-parser
    type:               exitcode-stdio-1.0
    hs-source-dirs:     testsuite, src
    main-is:            TestDescriptionParser.hs
    other-modules:      DescriptionParser
    build-depends:      base, 
                        Cabal >= 1.9.2,
                        containers, 
                        parsec, 
                        pretty, 
                        pandoc, 
                        HUnit, 
                        GenericPretty,
                        ghc-prim,
                        directory,
                        mtl,
                        conduit,
                        transformers,
                        bytestring,
                        blaze-markup,
                        utf8-string,
                        pandoc-types

