Name:           JiraStructureToDocx
Version:        0.0
Stability:      experimental
Description:    Utility to convert a Structure in Jira to a MS Word document.
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.9.2

executable JiraStructureToDocx
    main-is:            JiraStructureToDocx.hs
    GHC-Options:        -Wall -O4 -optc-Os
    hs-source-dirs:     src
    Other-Modules:      DescriptionParser, ImageStripper, IssueHierarchy, ProgramOptions, IssueHierarchyToDocx, JiraStructureToIssueHierarchy, ZephyrJson, JiraTypes, IssueHierarchyToFsDocx, DocxCustom, Highlighting, ImageSize, MIME, Query
    build-depends:      base, 
                        containers,
                        syb,
                        base64-bytestring,
                        tagsoup,
                        old-locale,
                        HTTP,
                        http-conduit, 
                        http-types, 
                        json, 
                        aeson, 
                        attoparsec, 
                        pretty, 
                        GenericPretty, 
                        ghc-prim,
                        directory,
                        mtl,
                        conduit,
                        transformers,
                        network,
                        bytestring,
                        HUnit,
                        parsec,
                        regex-pcre-builtin == 0.94.4.5.8.31,
                        highlighting-kate == 0.5.5.1,
                        pandoc == 1.12.2.1,
                        pandoc-types == 1.12.3,
                        cmdargs,
                        safe,
                        blaze-markup,
                        utf8-string,
                        filepath,
                        hashable,
                        test-framework-th,
                        test-framework,
                        test-framework-hunit,
                        raw-strings-qq,
                        resourcet,
                        monad-control,
                        errors,
                        random,
                        highlighting-kate,
                        texmath,
                        xml,
                        time,
                        zip-archive,
                        data-default,
                        text,
                        yaml,
                        strings,
                        csv


Test-Suite test-parser
    type:               exitcode-stdio-1.0
    hs-source-dirs:     testsuite, src
    main-is:            TestDescriptionParser.hs
    other-modules:      DescriptionParser
    build-depends:      base, 
                        Cabal >= 1.9.2,
                        containers, 
                        parsec, 
                        pretty, 
                        pandoc, 
                        HUnit, 
                        GenericPretty,
                        ghc-prim,
                        directory,
                        mtl,
                        conduit,
                        transformers,
                        bytestring,
                        blaze-markup,
                        utf8-string,
                        pandoc-types,
                        data-default,
                        text,
                        yaml,
                        strings,
                        raw-strings-qq,
                        csv

