Name:           JiraHaskell
Version:        0.0
Stability:      experimental
Description:    Utility to convert a Structure in Jira to a MS Word document.
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.20.0

library
    default-language:   Haskell2010
    GHC-Options:        -Wall -O -rtsopts
    hs-source-dirs:     ./
    exposed-Modules:    Jira.ImageStripper, 
                        Jira.IssueHierarchy, 
                        Jira.ProgramOptions, 
                        Jira.IssueHierarchyToDocx, 
                        Jira.JiraStructureToIssueHierarchy, 
                        Jira.ZephyrJson, 
                        Jira.JiraTypes, 
                        Jira.IssueHierarchyToFsDocx, 
                        Jira.Query,
                        Jira.StdStrFetch,
                        Jira.StdStrGen,
                        Jira.StrStdTypes,
                        Jira.BugReport,
                        Jira.Utility

    build-depends:      PandocReaderJira,
                        PandocWriterHackedDocx,
                        base, 
                        unordered-containers == 0.2.*,
                        bytestring,
                        aeson, 
                        test-framework-th,
                        test-framework,
                        test-framework-hunit,
                        raw-strings-qq,
                        HUnit == 1.2.5.2,
                        pandoc == 1.12.4.2,
                        pandoc-types == 1.12.4,
                        pretty == 1.1.1.1,
                        GenericPretty, 
                        data-default == 0.5.3,
                        yaml,
                        strings,
                        safe,
                        directory,
                        cmdargs,
                        filepath,
                        blaze-markup,
                        containers == 0.5.5.1,
                        utf8-string,
                        parsec == 3.1.5,
                        mtl,
                        csv,
                        resourcet,
                        network == 2.4.2.3,
                        http-types == 0.8.5, 
                        http-conduit == 2.1.4.4, 
                        conduit == 1.2.0.2,
                        conduit-extra == 1.1.4,
                        text == 1.1.0.0,
                        attoparsec == 0.10.4.0,
                        transformers == 0.3.0.0,
                        time == 1.4.2,
                        old-locale == 1.0.0.6,
                        deepseq
