Name:           JiraStructureToDocx
Version:        0.0
Stability:      experimental
Description:    Utility to convert a Structure in Jira to a MS Word document.
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.20.0

executable JiraStructureToDocx
    main-is:            JiraStructureToDocx.hs
    default-language:   Haskell2010
    GHC-Options:        -Wall -O -rtsopts
    hs-source-dirs:     ./
    build-depends:      JiraHaskell, base, GenericPretty == 1.2.1
                        

