Name:           JiraStructureToDocx
Version:        0.0
Stability:      experimental
Description:    Utility to convert a Structure in Jira to a MS Word document.
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.20.0

executable JiraStructureToDocx
    main-is:            JiraStructureToDocx.hs
    default-language:   Haskell2010
    GHC-Options:        -Wall -O -rtsopts
    hs-source-dirs:     ./
    build-depends:      JiraHaskell, 
                        pandoc == 1.12.4.2, 
                        pandoc-types,
                        bytestring == 0.10.4.0, 
                        filepath == 1.3.0.2, 
                        PandocWriterHackedDocx, 
                        directory,
                        base, 
                        network,
                        GenericPretty == 1.2.1
                        

