Name:           PandocReaderJira
Version:        0.0
Stability:      experimental
Description:    Parse a subset of Jira markup to Pandoc markup 
License:        MIT
License-file:   LICENSE
Author:         Handré Petrus Stolp
Maintainer:     HanStolpo@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.20.0

library 
    default-language:   Haskell2010
    GHC-Options:        -Wall -O -rtsopts
    hs-source-dirs:     ./
    Exposed-Modules:    Pandoc.Reader.Jira
    Other-Modules:      Pandoc.Reader.Jira.Details 
    build-depends:      base,
                        parsec,
                        pandoc == 1.12.4.2,
                        pandoc-types == 1.12.4,
                        safe


Test-Suite test
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    hs-source-dirs:     ./
    main-is:            ./Pandoc/Reader/Jira/Test.hs
    Other-Modules:      Pandoc.Reader.Jira.Details 
    build-depends:      base, 
                        parsec,
                        pandoc == 1.12.4.2,
                        pandoc-types == 1.12.4,
                        safe,
                        HUnit

