Name:           PandocWriterHackedDocx
Version:        0.0
Stability:      experimental
Description:    A copy of the pandoc 1.12.4.2 with the DocX writer hacked to give custom output
Build-Type:     Simple
Cabal-Version:  >= 1.20.0

library 
    default-language:   Haskell2010
    GHC-Options:        -Wall -O -rtsopts
    hs-source-dirs:     ./,./Pandoc/Writer/HackedDocx
    Exposed-Modules:    Pandoc.Writer.HackedDocx

    Other-Modules:      Data
                        Highlighting,
                        ImageSize,
                        MIME,
                        Shared,
                        Writers_Shared

    build-depends:      base,
                        pandoc == 1.12.4.2,
                        pandoc-types == 1.12.4,
                        safe,
                        bytestring == 0.10.4.0,
                        containers == 0.5.5.1,
                        zip-archive == 0.2.3.4,
                        time == 1.4.2,
                        highlighting-kate == 0.5.9,
                        xml == 1.3.13,
                        texmath == 0.6.6.3,
                        mtl == 2.1.3.1,
                        random == 1.0.1.1,
                        filepath == 1.3.0.2,
                        directory == 1.2.1.0,
                        syb == 0.4.1,
                        old-locale == 1.0.0.6,
                        tagsoup == 0.13.3,
                        base64-bytestring == 1.0.0.1,
                        network == 2.4.2.3,
                        HTTP == 4000.2.10,
                        unordered-containers == 0.2.4.0,
                        text == 1.1.0.0,
                        aeson == 0.7.0.4,
                        binary == 0.7.1.0
